# cppWeekly

./: README.md
cpp17/cpp17/: CMakeLists.txt
cpp17/cpp17/cpp17CookBook/: CMakeLists.txt
cpp17/cpp17/cpp17CookBook/Chapter-1/: CMakeLists.txt  if_constexpr.cpp
cpp17/cpp17/cpp17CookBook/Chapter-5/: CMakeLists.txt  reducing_range_in_vector.cpp
cpp17/cpp17/cpp17CookBook/Chapter-7/: CMakeLists.txt
cpp17/cpp17/cpp17CookBook/Chapter-8/: any.cpp
cpp17/cpp17/cppWeekly-cpp17/: CMakeLists.txt  ep-26-removed_language_feature_in_cpp17.cpp  ep12-any.cpp  ep18-constexpr_if.cpp  ep21-ifAndSwitch.cpp  ep22-clamp.cpp  ep25-aggregate_initializations.cpp  ep27-change_to_sequence_containers.cpp  ep28-fallthrough.cpp  ep73-string_view.cpp  fold_expressions.cpp
cpp17/cpp17CookBook/: CMakeLists.txt  CMakeSettings.json
cpp17/cpp17CookBook/cpp17CookBook/: CMakeLists.txt
cpp17/cpp17CookBook/cpp17CookBook/Chapter-8/: CMakeLists.txt  any.cpp
cpp20/: ep146-std-to_address.cpp  ep159-virtual-constexpr.cpp  ep165-is_constant_evaluated.cpp  ep174-bind_front.cpp  ep175-operator_three_way.cpp  ep187-constexpr-algorithm.cpp  ep188-constexpr-new.cpp  ep193-contains_member.cpp  ep216-lerp-midpoint.cpp  ep218-to-array.cpp  ep220-likely-unlikely.cpp  ep228-mathmatical-constants.cpp  ep242-concepts-if-constexpr.cpp  ep258-source_location.cpp
cpp20/cpp20/: cpp20.sln
cpp20/cpp20/cpp20/: cpp20.cpp  cpp20.vcxproj  cpp20.vcxproj.filters
