

cmake_minimum_required (VERSION 3.8)


add_executable (ep12-any "ep12-any.cpp"						)
add_executable(ep18-constexpr_if "ep18-constexpr_if.cpp"	)
add_executable(fold_expressions "ep20-fold_expressions.cpp" )
add_executable(ifAndSwitch "ep21-ifAndSwitch.cpp"			)
add_executable(ep22-clamp "ep22-clamp.cpp"					)
add_executable(ep25-aggregate_initializations "ep25-aggregate_initializations.cpp")